adjusting layout issues

--- a/src/assets/styles/main.css
+++ b/src/assets/styles/main.css
@@ -49,4 +49,5 @@
 
 body {
   font-family: "Instrument Sans", sans-serif;
+  @apply bg-neutral-50;
 }
